--- a/CG2019112315蔡欣运/CG2019112315蔡欣运.vcxproj.filters
+++ b/CG2019112315蔡欣运/CG2019112315蔡欣运.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClInclude Include="CG2DPolygon.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Create2dPolygon.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CG2019112315蔡欣运.cpp">
@@ -321,6 +324,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="CG2DPolygon.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Create2dPolygon.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
