--- a/CG2019112315蔡欣运/CG2019112315蔡欣运.vcxproj.filters
+++ b/CG2019112315蔡欣运/CG2019112315蔡欣运.vcxproj.filters
@@ -186,6 +186,18 @@
     <ClInclude Include="Matrix33.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="TransformTranslate2DRenderable.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="TransformRotate2DRenderable.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="TransformScale2DRenderable.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="TransformMirror2DRenderable.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CG2019112315蔡欣运.cpp">
@@ -345,6 +357,18 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Matrix33.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TransformTranslate2DRenderable.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TransformRotate2DRenderable.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TransformScale2DRenderable.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TransformMirror2DRenderable.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
