Dev/cxy: 2D graph transform support and interactive feature (#3)
* feat: Fill algorithm default implement

* fix: transmit the ScanLineFillPolygon implement to CGDI2DRenderContext

* fix: fix brush checkbox can't be checked

* fix: change "双击" to "按下回车"

* fix: critical bug of fill algorithm
feat: judge partial extremum point

* feat: distinguish draw lines or draw filled area

* feat: interactive draw polygon

* chore: create2dpolygon

* feat: use brush in CDC

* feat: 4 seed fill algorithms and CDC flood fill

* feat: matrix

* feat: 3 dimantion vector & vector2 data type feature

* style: reduced some comments

* chore: vectors

* fix: paint with brush fill

* docs: comments of type define

* feat: more getRotation func

* feat: support 2d renderable transform

* feat: line segment 2d transform

* feat: 2d mirror by line(undone)

* feat: 2d renderable rotate interactive commond

* feat: 2d renderable scale interactive commond

* feat: 2d renderable translate interactive commond

* feat: support 2d transform

--- a/CG2019112315蔡欣运/CG2019112315蔡欣运.vcxproj.filters
+++ b/CG2019112315蔡欣运/CG2019112315蔡欣运.vcxproj.filters
@@ -177,6 +177,27 @@
     <ClInclude Include="Create2dPolygon.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Vector3.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Matrix22.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Matrix33.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="TransformTranslate2DRenderable.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="TransformRotate2DRenderable.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="TransformScale2DRenderable.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="TransformMirror2DRenderable.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CG2019112315蔡欣运.cpp">
@@ -327,6 +348,27 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Create2dPolygon.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Vector3.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Matrix22.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Matrix33.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TransformTranslate2DRenderable.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TransformRotate2DRenderable.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TransformScale2DRenderable.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TransformMirror2DRenderable.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
