--- a/CG2019112315蔡欣运/CG2019112315蔡欣运.vcxproj
+++ b/CG2019112315蔡欣运/CG2019112315蔡欣运.vcxproj
@@ -230,14 +230,21 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="CGDI2DChildFrame.h" />
     <ClInclude Include="MainFrm.h" />
+    <ClInclude Include="Matrix22.h" />
+    <ClInclude Include="Matrix33.h" />
     <ClInclude Include="OutputWnd.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Pick2DRenderable.h" />
     <ClInclude Include="PropertiesWnd.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TransformMirror2DRenderable.h" />
+    <ClInclude Include="TransformRotate2DRenderable.h" />
+    <ClInclude Include="TransformScale2DRenderable.h" />
+    <ClInclude Include="TransformTranslate2DRenderable.h" />
     <ClInclude Include="UIEventListener.h" />
     <ClInclude Include="Vector2.h" />
+    <ClInclude Include="Vector3.h" />
     <ClInclude Include="ViewTree.h" />
   </ItemGroup>
   <ItemGroup>
@@ -284,6 +291,8 @@
     <ClCompile Include="FileView.cpp" />
     <ClCompile Include="CGDI2DChildFrame.cpp" />
     <ClCompile Include="MainFrm.cpp" />
+    <ClCompile Include="Matrix22.cpp" />
+    <ClCompile Include="Matrix33.cpp" />
     <ClCompile Include="OutputWnd.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -293,8 +302,13 @@
     </ClCompile>
     <ClCompile Include="Pick2DRenderable.cpp" />
     <ClCompile Include="PropertiesWnd.cpp" />
+    <ClCompile Include="TransformMirror2DRenderable.cpp" />
+    <ClCompile Include="TransformRotate2DRenderable.cpp" />
+    <ClCompile Include="TransformScale2DRenderable.cpp" />
+    <ClCompile Include="TransformTranslate2DRenderable.cpp" />
     <ClCompile Include="UIEventListener.cpp" />
     <ClCompile Include="Vector2.cpp" />
+    <ClCompile Include="Vector3.cpp" />
     <ClCompile Include="ViewTree.cpp" />
   </ItemGroup>
   <ItemGroup>
