feat: 2d observation support

--- a/CG2019112315蔡欣运/CG2019112315蔡欣运.vcxproj.filters
+++ b/CG2019112315蔡欣运/CG2019112315蔡欣运.vcxproj.filters
@@ -198,6 +198,9 @@
     <ClInclude Include="TransformMirror2DRenderable.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Move2DCamera.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CG2019112315蔡欣运.cpp">
@@ -369,6 +372,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="TransformMirror2DRenderable.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Move2DCamera.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
